fix: resolve FK constraint violation in answer_nm_answer by using managed JPA proxies for NmAnswers