@@ -4,8 +4,10 @@ package com.example.appenquetes1.service;
 import com.example.appenquetes1.dto.useranswer.UserAnswerRequestDTO;
 import com.example.appenquetes1.dto.useranswer.UserAnswerResponseDTO;
 import com.example.appenquetes1.entity.Answers;
+import com.example.appenquetes1.entity.NmAnswers;
 import com.example.appenquetes1.mapper.AnswersMapper;
 import com.example.appenquetes1.repository.AnswersRepository;
+import com.example.appenquetes1.repository.NmAnswersRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,6 +20,9 @@ public class AnswersService {
 
     @Autowired
     private AnswersRepository answersRepository;
+
+    @Autowired
+    private NmAnswersRepository nmAnswersRepository;
 
     public UserAnswerResponseDTO save(UserAnswerRequestDTO request) {
         Answers answer = AnswersMapper.toEntity(request);
@@ -69,19 +74,30 @@ public class AnswersService {
         answersRepository.deleteByUserIdAndSurveyId(userId, surveyId);
     }
 
+    @Transactional
     public void submitSurveyAnswers(List<UserAnswerRequestDTO> requests) {
 
         if (requests.isEmpty()) return;
 
-        Integer userId = requests.get(0).getIdUser();
-        Integer surveyId = requests.get(0).getIdSurvey();
-
         // Pour eviter le dedoublement des reponses(entre new et old answers)
+        //Integer userId = requests.get(0).getIdUser();
+        //Integer surveyId = requests.get(0).getIdSurvey();
         //answersRepository.deleteByUserIdAndSurveyId(userId, surveyId);
 
         List<Answers> answers = requests.stream()
-                .map(AnswersMapper::toEntity)
-                .toList();
+                .map(dto -> {
+                    Answers answer = AnswersMapper.toEntity(dto);
+                    // Replace transient NmAnswers stubs with managed JPA proxies
+                    // so Hibernate can resolve the FK in the answer_nm_answer join table
+                    if (dto.getIdNmAnswer() != null && !dto.getIdNmAnswer().isEmpty()) {
+                        List<NmAnswers> managed = dto.getIdNmAnswer().stream()
+                                .map(id -> nmAnswersRepository.getReferenceById(id))
+                                .collect(Collectors.toList());
+                        answer.setNmAnswers(managed);
+                    }
+                    return answer;
+                })
+                .collect(Collectors.toList());
 
         answersRepository.saveAll(answers);
     }
